--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <hr class="w3-border-white" style="margin:auto;width:70%">
                                 <p class="w3-large w3-center">this is my generic landing page</p>
                                 <p class="w3-center">hope you like it</p>
-                                <p class="w3-small w3-center"><a href="mailto:me@jobur.net" class="w3-center">me@jobur.net</a></p>
+                                <p class="w3-small w3-center">me (at) jobur.net</p>
                         </div>
                 </div>
         </body>
