--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <p class="w3-large w3-center">this is my generic landing page</p>
                                 <p class="w3-center">hope you like it</p>
                                 <p class="w3-small w3-center">me (at) jobur.net</p>
+                                <p class="w3-tiny w3-center">its formatted like this to<br>stop me getting email spam</p>
                         </div>
                 </div>
         </body>
